--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -163,7 +163,7 @@ const absoluteUrl = `https://loneyeti.com${url}`;
       <div class="bg-white dark:bg-slate-800 rounded-xl p-8 shadow-xl flex flex-col md:flex-row gap-6 items-center animate-fade-in">
         <div class="flex-shrink-0">
           <div class="w-24 h-24 rounded-full bg-gradient-to-br from-primary-700 to-blue-500 flex items-center justify-center overflow-hidden">
-            <img src="/favicon.svg" alt="Lone Yeti" class="w-16 h-16" />
+            <img src="/favicon.ico" alt="Lone Yeti" class="w-16 h-16" />
           </div>
         </div>
         <div>
@@ -249,7 +249,7 @@ const absoluteUrl = `https://loneyeti.com${url}`;
           <div class="mt-8 md:mt-0 flex-shrink-0 w-full md:w-1/3 lg:w-1/4">
             <div class="aspect-square bg-white dark:bg-slate-800 rounded-2xl p-4 shadow-md">
               <div class="w-full h-full flex items-center justify-center">
-                <img src="/favicon.svg" alt="Snowgoose" class="w-4/5 h-4/5" />
+                <img src="/snowgoose-logo-2025-black.png" alt="Snowgoose" class="" />
               </div>
             </div>
           </div>
