Fixed blog roll date issue.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import { getCollection } from 'astro:content';
+import { formatPublishDate } from '../utils/dates'
 
 // Get latest blog posts from collection
 const allPosts = Object.values(import.meta.glob('./blog/*.mdx', { eager: true }));
-const featuredPosts = allPosts
-  .sort((a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime())
+const featuredPosts = allPosts.sort((a, b) => new Date(b.frontmatter.pubDate).getTime() - new Date(a.frontmatter.pubDate).getTime())
   .slice(0, 3);
 ---
 
@@ -232,7 +232,7 @@ const featuredPosts = allPosts
                 {post.frontmatter.description}
               </p>
               <div class="flex flex-wrap items-center gap-3 text-sm text-slate-500 dark:text-slate-400 mt-auto">
-                <time datetime={post.frontmatter.pubDate}>{new Date(post.frontmatter.pubDate).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</time>
+                <time datetime={post.frontmatter.pubDate}>{formatPublishDate(post.frontmatter.pubDate)}</time>
                 {/* Read time is not available in collection data, removing */}
               </div>
             </div>
