--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import { getCollection } from 'astro:content';
+import { formatPublishDate } from '../../utils/dates';
 
 // Get all blog posts from collection
 const allPosts = Object.values(import.meta.glob('./*.mdx', { eager: true }));
@@ -87,7 +88,7 @@ const regularPosts = allPosts.filter(post => !post.frontmatter.featured);
                     </p>
                   </div>
                   <div class="flex flex-wrap items-center gap-3 text-sm text-slate-500 dark:text-slate-400">
-                    <time datetime={featuredPost.frontmatter.date}>{new Date(featuredPost.frontmatter.date).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</time>
+                    <time datetime={featuredPost.frontmatter.pubDate}>{formatPublishDate(post.frontmatter.pubDate)}</time>
                     {/* Read time is not available in collection data, removing */}
                   </div>
                 </div>
@@ -119,7 +120,7 @@ const regularPosts = allPosts.filter(post => !post.frontmatter.featured);
               {post.frontmatter.description}
             </p>
             <div class="flex flex-wrap items-center gap-3 text-sm text-slate-500 dark:text-slate-400 mt-auto">
-              <time datetime={post.frontmatter.pubDate}>{new Date(post.frontmatter.pubDate).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</time>
+              <time datetime={post.frontmatter.pubDate}>{formatPublishDate(post.frontmatter.pubDate)}</time>
               {/* Read time is not available in collection data, removing */}
             </div>
           </div>
