Revised meta description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import '../styles/global.css';
 import Nav from '../components/Nav.astro';
 import PostHog from '../components/posthog.astro'
-const { title = "Lone Yeti Development", description = "Professional software development with a focus on quality and innovation." } = Astro.props;
+const { title = "Lone Yeti Development", description = "Professional software development with a focus on quality and innovation. Developer of Snowgoose and Novelrunner." } = Astro.props;
 ---
 
 <!DOCTYPE html>
